--- a/BadgeGeneratorLibrary/build.gradle
+++ b/BadgeGeneratorLibrary/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
+    implementation "androidx.browser:browser:1.4.0"
 }
